--- a/source-css/clopmotes.css
+++ b/source-css/clopmotes.css
@@ -425,8 +425,12 @@ a[href|="/eevndrink"], a[href|="/spitbutt"], a[href|="/spitdom"], a[href|="/tavi
 {background-image:url(%%misfitsd%%);display:block;float:left;}
 
 /* Misfits e */
-a[href|="/stripeass"], a[href|="/zecoraoops"], a[href|="/zecoraanal"], a[href|="/burchy"], a[href|="/sexyzecoramaid"]
+a[href|="/stripeass"], a[href|="/zecoraoops"], a[href|="/zecoraanal"], a[href|="/burchy"], a[href|="/sexyzecoramaid"], a[href|="/ggnome"]
 {background-image:url(%%misfitse%%);display:block;float:left;}
+
+/* Misfits f */
+a[href|="/twidrip"], a[href|="/twipanties"], a[href|="/twibegentle"], a[href|="/twibadteacher"] , a[href|="/twilacornpeek"]
+{background-image:url(%%misfitsf%%);display:block;float:left;}
 
 
 /* Animated Emotes */
@@ -471,4 +475,10 @@ a[href|="/zecoraoops"] {width: 198px;height:200px;background-position: 0px -198p
 a[href|="/zecoraanal"] {width: 198px;height:200px;background-position: 0px -398px;}
 a[href|="/burchy"] {width: 200px;height:150px;background-position: -250px 0px;}
 a[href|="/sexyzecoramaid"] {width: 135px;height:150px;background-position: -348px -150px;}
-a[href|="/"] {width: 133px;height:200px;background-position: -350px 0px;}
+a[href|="/twidrip"] {width: 176px;height:200px;background-position: 0px 0px;}
+a[href|="/twipanties"] {width: 188px;height:150px;background-position: 0px -200px;}
+a[href|="/twibegentle"] {width: 118px;height:150px;background-position: 0px -350px;}
+a[href|="/twibadteacher"] {width: 186px;height:200px;background-position: -176px 0px;}
+a[href|="/twilacornpeek"] {width: 209px;height:200px;background-position: -188px -200px;}
+a[href|="/ggnome"] {width: 170px;height:200px;background-position: 0px -598px;}
+a[href|="/"] {width: 133px;height:200px;background-position: 0px -598px;}
