--- a/source-css/mlpoc.css
+++ b/source-css/mlpoc.css
@@ -941,7 +941,7 @@ a[href|="/swordserious"] {width:88px;height:132px;background-position: -815px -1
 
 /* SYNTAX ERROR */ 
 
-a[href|="/sebored"], a[href|="/sehahaha"], a[href|="/sesly"], a[href|="/synpoker"], a[href|="/synponder"], a[href|="/synsquint"], a[href|="/syntaxderp"], a[href|="/syntaxadorkable"], a[href|="/sehuhhuh"], a[href|="/sejoy"], a[href|="/seohhi"], a[href|="/synsmile"], a[href|="/secute"], a[href|="/squintax"], a[href|="/syntaxmeerkat"], a[href|="/robyxmeerkat"], a[href|="/synkathug"], a[href|="/seboring"], a[href|="/sefacehoof"], a[href|="/synwb"], a[href|="/sesup"], a[href|="/synfun"], a[href|="/synangry"], a[href|="/syncutestare"], a[href|="/sepout"], a[href|="/sehugs"]
+a[href|="/sebored"], a[href|="/sehahaha"], a[href|="/sesly"], a[href|="/synpoker"], a[href|="/synponder"], a[href|="/synsquint"], a[href|="/syntaxderp"], a[href|="/syntaxadorkable"], a[href|="/sehuhhuh"], a[href|="/sejoy"], a[href|="/seohhi"], a[href|="/synsmile"], a[href|="/secute"], a[href|="/squintax"], a[href|="/syntaxmeerkat"], a[href|="/robyxmeerkat"], a[href|="/synkathug"], a[href|="/seboring"], a[href|="/sefacehoof"], a[href|="/synwb"], a[href|="/sesup"], a[href|="/synfun"], a[href|="/synangry"], a[href|="/syncutestare"], a[href|="/sepout"], a[href|="/sehugs"], a[href|="/sewhaaat"], a[href|="/seshy"], a[href|="/sesleepy"], a[href|="/secolt"], a[href|="/synskip"], a[href|="/seshrug"], a[href|="/sestare"]
 {background-image:url(%%syntax-error%%);display:block;float:left;}
 
 a[href|="/sebored"] {width:88px;height:70px;background-position: 0 0;}
@@ -969,6 +969,13 @@ a[href|="/synangry"] {width:70px;height:70px;background-position: 0 -370px;}
 a[href|="/syncutestare"] {width:78px;height:100px;background-position: -919px -70px;}
 a[href|="/sepout"] {width:83px;height:100px;background-position: -244px -220px;}
 a[href|="/sehugs"] {width:181px;height:100px;background-position: -327px -220px;}
+a[href|="/sewhaaat"] {width:65px;height:70px;background-position: -70px -370px;}
+a[href|="/seshy"] {width:67px;height:70px;background-position: -135px -370px;}
+a[href|="/sesleepy"] {width:160px;height:150px;background-position: -508px -220px;}
+a[href|="/secolt"] {width:61px;height:70px;background-position: -202px -370px;}
+a[href|="/synskip"] {width:119px;height:150px;background-position: -668px -220px;}
+a[href|="/seshrug"] {width:73px;height:70px;background-position: -263px -370px;}
+a[href|="/sestare"] {width:67px;height:70px;background-position: -336px -370px;}
 
 /* END OF SYNTAX ERROR */
 
@@ -1035,7 +1042,7 @@ a[href|="/dhsquinty"] {width:68px;height:70px;background-position: -263px 0;}
 
 /* Aerohead */
 
-a[href|="/aerowb"], a[href|="/aerosup"], a[href|="/aeroangry"], a[href|="/aerocutestare"], a[href|="/aeropout"], a[href|="/aerohugs"]
+a[href|="/aerowb"], a[href|="/aerosup"], a[href|="/aeroangry"], a[href|="/aerocutestare"], a[href|="/aeropout"], a[href|="/aerohugs"], a[href|="/aerowhaaat"], a[href|="/aeroshy"], a[href|="/aerosleepy"], a[href|="/aeroskip"]
 {background-image:url(%%aerohead%%);display:block;float:left;}
 
 a[href|="/aerowb"] {width:129px;height:150px;background-position: 0 -70px;}
@@ -1043,7 +1050,11 @@ a[href|="/aerosup"] {width:182px;height:150px;background-position: -129px -70px;
 a[href|="/aeroangry"] {width:62px;height:70px;background-position: 0 0;}
 a[href|="/aerocutestare"] {width:80px;height:100px;background-position: -311px -70px;}
 a[href|="/aeropout"] {width:85px;height:100px;background-position: -391px -70px;}
-a[href|="/aerohugs"] {width:183px;height:100px;background-position: -476px -70px;}
+a[href|="/aerohugs"] {width:181px;height:100px;background-position: -476px -70px;}
+a[href|="/aerowhaaat"] {width:62px;height:70px;background-position: -62px 0;}
+a[href|="/aeroshy"] {width:66px;height:70px;background-position: -124px 0;}
+a[href|="/aerosleepy"] {width:128px;height:150px;background-position: -657px -70px;}
+a[href|="/aeroskip"] {width:118px;height:150px;background-position: -785px -70px;}
 
 /* END OF AEROHEAD */
 
