--- a/source-css/mylittlemotorhead.css
+++ b/source-css/mylittlemotorhead.css
@@ -752,6 +752,17 @@ a[href|="/rdfsatom"] {
 a[href|="/rdfsatom"] {
     background-position: -250px -289px
     }
+a[href|="/sfmkiv"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 280px;
+    height: 108px;
+    background-image: url(%%mhemotes%%)
+    }
+a[href|="/sfmkiv"] {
+    background-position: -250px -419px
+    }
 a[href|="/wfworking"] {
     display: block;
     clear: none;
