--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -435,7 +435,7 @@ a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[
 {background-image:url(%%100x100b%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100c 'motes */
-a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"]
+a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"], a[href|="/cadsad"]
 {background-image:url(%%100x100c%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -512,7 +512,7 @@ a[href|="/zecoraspooky"], a[href|="/zecorabored"], a[href|="/zecoramagicdust"], 
 {background-image:url(%%misfitsj%%);display:block;float:left;}
 
 /* Misfits k */
-a[href|="/cadscience"]
+a[href|="/cadscience"], a[href|="/appul"], a[href|="/sadprincesshorse"]
 {background-image:url(%%misfitsk%%);display:block;float:left;}
 
 /*
@@ -536,7 +536,7 @@ a[href|="/twihappycry"], a[href|="/nightmaresparkle"], a[href|="/nomakeup"], a[h
 {background-position: 0 -100%;}
 
 /* Grid pos 1,1 'motes */
-a[href|="/properbudget"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href|="/grannyglad"], a[href|="/magnemites"], a[href|="/gravestone"], a[href|="/theydied"], a[href|="/scootasquee"], a[href|="/greatandpowerfuldinky"], a[href|="/ninetales"], a[href|="/zecoracarry"], a[href|="/twifascinating"]
+a[href|="/properbudget"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href|="/grannyglad"], a[href|="/magnemites"], a[href|="/gravestone"], a[href|="/theydied"], a[href|="/scootasquee"], a[href|="/greatandpowerfuldinky"], a[href|="/ninetales"], a[href|="/zecoracarry"], a[href|="/twifascinating"], a[href|="/cadsad"]
 {background-position: -100% -100%;}
 
 /* Grid pos 2,1 'motes */
@@ -1169,3 +1169,5 @@ a[href|="/sunsetbook"] {width:150px;height:115px;background-position: -86px -607
 a[href|="/nursetwi"], a[href|="/twinurse2"] {width:74px;height:150px;background-position: -606px -450px;}
 a[href|="/feelzies"] {width:83px;height:100px;background-position: -628px -600px;}
 a[href|="/cadscience"] {width:112px;height:160px;}
+a[href|="/appul"] {width:125px;height:150px;background-position: -112px 0;}
+a[href|="/sadprincesshorse"] {width:200px;height:132px;background-position: -237px 0;}
