--- a/source-css/zponymotes.css
+++ b/source-css/zponymotes.css
@@ -1,3 +1,24 @@
+
+a[href^="/headlesschicken"] {
+    background-position: 0px 0px;
+    display: block;
+    clear: none;
+    float: left;
+    width: 105px;
+    height: 105px;
+    background-image: url(%%easemyscoot%%)
+    }
+a[href^="/dashbat"] {
+    background-position: 0px 0px;
+    display: block;
+    clear: none;
+    float: left;
+    width: 140px;
+    height: 140px;
+    background-image: url(%%rdbreat%%)
+    }
+
+
 a[href^="/easemyscoots"] {
     background-position: 0px 0px;
     display: block;
@@ -17,6 +38,7 @@ a[href^="/rdbreath"] {
     height: 140px;
     background-image: url(%%rdbreath%%)
     }
+
 
 a[href^="/badpinkie"], a[href^="/ppbad"] {
     background-position: 0px 0px;
