--- a/source-css/mlpdrawingschool.css
+++ b/source-css/mlpdrawingschool.css
@@ -7,7 +7,7 @@ body {
    background-repeat: no-repeat;
    background-position: Center Center;
    background-attachment:fixed;
-   margin-top: 5px;
+   margin-top: 0px;
    background-color:#F6F9FC;  
    font-family:sans-serif !important;
    }
@@ -23,9 +23,6 @@ html {
 h2 {  
     color:#000 !important;  
     font-size:18px; 
-}
-h4 {
-margin: 20px  40px 0;
 }
 /*
 .side h4 a{                                                    submit link button */
@@ -106,10 +103,12 @@ margin-top:1px !important;
    background-repeat: no-repeat; 
    height: 100px;
 }
+span.hover.pagename.redditname{
+    font-size:0px
+}
 
 .redditname a{
 text-indent:-9001px;
-margin-top:30px;
 }
 
 #header-img-a,
@@ -131,9 +130,9 @@ margin-right:0px;
 #sr-header-area{  
     background: #F6F9FC !important;  
     border-bottom:2px solid #0088CC;  
-    height:11px;  
-    line-height:10px;  
-    margin-top: -2px;
+    height:13px;  
+    line-height:14px;  
+    margin-top: 0px;
 }  
 .res-nightmode #sr-header-area{  
     background: #F6F9FC !important;  
@@ -147,6 +146,8 @@ margin-right:0px;
 #sr-more-link { 
     background-color: #F6F9FC;  
     color:#000;  
+    padding-top:-1px;
+    margin-top:-1px;
 }  
 #sr-header-area .srdrop .selected {  
     color: #000;  
@@ -159,13 +160,10 @@ margin-right:0px;
 */  
 
 .drop-choices{  
-    background-color:#333 !important;  
-    border:2px solid #0088CC;  
-    border-radius:7px !important;  
+    background-color:#F6F9FC !important;  
+    border:1px solid #0088CC;  
+    border-radius:6px !important;  
     padding: 2px 10px;  
-}  
-.drop-choices a {  
-    color:#999  !important;  
 }  
 #sr-header-area div.srdrop a.choice.bottom-option {  
     color: white !important;  
@@ -186,7 +184,7 @@ margin-right:0px;
     background: url(%%50tile%%) !important;  
     border: none;  
     font-size:14px;  
-    margin: 0 14px 0;  
+    margin: 0 11px 0;  
     line-height:1.4;
 }  
 .tabmenu li.selected a {  
@@ -206,12 +204,22 @@ margin-right:0px;
     left: -15px;
  
 }  
+ul.tabmenu {                   
+    margin-top:7px;                    
+}
 #header-bottom-right { 
  
     position:absolute; 
-    top:82px;
+    top:90px;
     right:41px;
+    border-top-right-radius: 7px;
+    bottom:0px;
 }  
+#header-bottom-right.res-navTop {                      
+    border-top-left-radius: 4px;    
+    border-top-right-radius: 0px;  
+    content:0px !important;                    
+}
 #header-bottom-right a {  
     color:#808080;  
     font-weight:normal;
@@ -222,31 +230,34 @@ margin-right:0px;
 }  
 .res #header-bottom-right {
     position:absolute; 
-    right:5px;
-    top:84px;
+    right:0px;
+    top:89px;
+    bottom:0px;
 }  
+#mail.nohavemail { /*For the peeps who installed Derpy Orangered*/
+    margin-top:4px;
+    margin-bottom:-1px;
+}
 .res #userbarToggle {
 
     background-color:#ECF2F5;
     color:#BBCCDD;
     border-color:#BBCCDD;
+    margin-left:1px;
 }
 .res .content {
-    margin-top:20px;
+    margin-top:37px;
 }
 
 
 #RESSettingsButton {
-    margin-top:-10px !important;
+    margin-top:-12px !important;
 }
 .res #header-bottom-right img, .res #RESAccountSwitcherIconOverlay{
     margin-top:-10px !important;
 }
 .res #RESPrefsDropdown {
-    margin-top: 10px;
-}
-.res #userbarToggle, .res #RESMainGearOverlay {
-    height: 24px !important;
+    margin-top: 0px;
 }
 
 
@@ -265,7 +276,7 @@ margin-right:0px;
     right:  20px;  
     margin: 28px 5px 5px 15px;    
     background-color: transparent !important;  
-    font-size:0px; 
+    font-size:0px;
     border-left:none;
     float:right;
 
@@ -290,13 +301,13 @@ margin-right:0px;
 */  
 
 .side {  
-    padding: 15px 0px 0px 25px;  
+    padding: 33px 0px 0px 25px;  
     background:none;  
 }  
 form#search {  
     border: 2px solid #BED5CE;  
     background:#33AADD;  
-    font-size:0.812em;  
+    font-size:10px; 
     min-height:40px;  
 }  
 #search:before {
@@ -309,10 +320,9 @@ form#search {
     }
 #search input[type="text"] {
     /* Search box */
-    float: right;
-    width: 145px !important;
-    height: 13px !important;
-    margin: 10px 15px 0px 0px;
+    margin: 0px 0px 5px 10px;
+    vertical-align: middle;
+    width: 160px;
     border: 1px solid #0088BB;
     background-color: white;
     color: black;
@@ -326,7 +336,12 @@ form#search {
     border-top:none;  
     border-radius:0; 
 }
-
+#moresearchinfo {
+    margin-left:10px !important;
+}
+a.searchpane-toggle-hide {
+    margin-top:-20px;
+}
 .titlebox {
 text-align: center;
 }
@@ -336,8 +351,8 @@ text-align:left;
 
 .titlebox .bottom {   /* Sub created by... */
 background-color:#F6F9FC !important;
-padding: 15px 3px 20px !important;
-margin: -6px !important;
+padding: 35px 3px 17px !important;
+margin: -23px -5px -5px -5px !important;
 border-top:none;
 
 }
@@ -358,8 +373,12 @@ border-top:none;
     color:black;  
 }  
 .sidecontentbox .content {  
-    border:none;  
+    border:1px solid #BBCCDD;  
+    margin-bottom:14px !important;
 }  
+ul.content {
+    margin-top:0px !important;
+}
 .sidebox .spacer {  
     background:none;
 }  
@@ -392,7 +411,7 @@ a.author {
   margin-top:1px;
   background-color:#F6F9FC !important;
   width: 288px;
-  
+ 
 
 }  
 .fancy-toggle-button .remove{
@@ -429,7 +448,8 @@ overflow:hidden;
 .titlebox .md {                                                       /* Replace submit button */
 background-color:transparent !important;
 border-top: 1px solid #BBCCDD !important;
-margin: 0 -6px !important;
+border-left: 1px solid #BBCCDD !important;
+margin: 0px -6px 23px !important;
 padding-top:10px;
 }
 .sidebox.submit, .sidebox.create {
@@ -457,6 +477,9 @@ font-size:15px;
 color:red;
 content:"Please respond to your critics";
 background-color:transparent !important;
+}
+div.title {
+    margin-top:17px;
 }
 /*  
 ************************  
@@ -523,31 +546,53 @@ input {
     border-radius:0;  
 }  
 #link-desc {                                     /* Link description boxes */
-    background:#33AADD;  
+    background:#9edcf6;  
     border:1px solid #0088BB;  
 }  
 #link-desc:after {                         /* Anti meme reminder when posting links */
     content: " The key to an unsuccessful submission is posting memes.";
 }
 #text-desc {  
-    background:#33AADD;  
+    background:#9edcf6;  
     border:1px solid #0088BB;  
 }  
+/*New post spam filtered warning*/
+#title-field.roundfield:before {
+    content:"Please check the new queue after posting. If your post doesn't show up, you were spam filtered by mistake! Message the moderators with a link to the submission.";
+    font-size:0.86em;
+    padding:5px;
+    border:1px solid #33AADD;
+    /*background-color:#EFF7FF;*/
+    color:black;
+    font-weight:bold;
+    display:block;
+    margin-bottom:10px
+}
 ul.tabmenu.formtab {                      /* Text / link tabs */
     position:relative;  
     right:550px;
-    top:1px;
+    top:-27.5px;
 }  
 ul.tabmenu.formtab li a{  
     border:1px solid #33AADD;  
     background: #ECF2F5 !important;  
+    margin-top:5px !important; 
+    color:#BED5CE;
 }  
 ul.tabmenu.formtab li.selected a{  
     border:1px solid #33AADD;  
     background: #ECF2F5 !important;  
 }  
 .icon-menu a {
-background:#F6F9FC;
+background:none;
+}
+
+.formtabs-content {
+    border-top: 4px solid #33AADD;
+    margin-top: 12px !important;
+}
+div.spacer {
+    margin-top:11px;
 }
 
 .content .tabmenu{                  /* Tabs on the mod's edit flair page */
@@ -631,18 +676,26 @@ padding-left:0px !important;
     color:#999 !important;  
 }  
 .res #RESShortcutsRight, #RESShortcutsLeft, #RESShortcutsAdd {
-    height:11px !important;
-    font-size:10px !important;  
-    color:#0088BB !important;
-    line-height:1em !important;
-    font-weight:bold;
+    height:10px !important;
+    width:11px !important;
     background-color:transparent !important;
+    margin-top:-1px !important;
 }
 
 .res #RESShortcutsEditContainer {
-    height: 8px !important;
-    background:none !important;
+    height: 10px !important;
+    background:#F6F9FC !important;
 }
+#RESShortcutsSort {
+    width:11px !important;
+    height:10px !important;
+    background:#F6F9FC !important;
+    margin-top:-3px !important;
+}
+#sort-menu.drop-choices {
+    margin-top:7px !important;
+}
+ 
 .res-nightmode .side .usertext-body .md{
 background-color:#222222 !important;
 }
@@ -718,7 +771,7 @@ That big yellow box thing
     padding-top: 5px;
     padding-bottom: 5px;
     height: 13px;
-    top: 117px;
+    top: 116px;
     left: 0px;
     z-index: 1;
     margin: 0;
@@ -754,7 +807,7 @@ text-decoration:underline;
     padding-top: 5px;
     padding-bottom: 5px;
     height: 13px;
-    top: 117px;
+    top: 116px;
     left: 66%;
     z-index: 1;
     margin: 0;
@@ -790,7 +843,7 @@ text-decoration:underline;
     padding-top: 5px;
     padding-bottom: 5px;
     height: 13px;
-    top: 117px;
+    top: 116px;
     left: 33%;
     z-index: 1;
     margin: 0;
