Stylesheet/emote/tag updates 2014-11-02

--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -403,7 +403,7 @@ a[href|="/ajsup"],a[href|="/ajwhatsgood"],a[href|="/rajsup"],a[href|="/rajwhatsg
   background-position:0 -500%;
 }
 
-a[href|="/ohcomeon"],a[href|="/sbcomeon"],a[href|="/rohcomeon"],a[href|="/rsbcomeon"],a[href|="/trixiesmug"],a[href|="/rtrixiesmug"],a[href|="/louder"],a[href|="/rlouder"],a[href|="/octavia"],a[href|="/whomeverthisis"],a[href|="/roctavia"],a[href|="/rwhomeverthisis"],a[href|="/unamusedsunset"],a[href|="/unamusedss"],a[href|="sunsetseriously"],a[href|="/ssseriously"],.side .md table tr:nth-of-type(13) td:nth-of-type(1):after,.flair-screwball {
+a[href|="/ohcomeon"],a[href|="/sbcomeon"],a[href|="/rohcomeon"],a[href|="/rsbcomeon"],a[href|="/trixiesmug"],a[href|="/rtrixiesmug"],a[href|="/louder"],a[href|="/rlouder"],a[href|="/octavia"],a[href|="/whomeverthisis"],a[href|="/roctavia"],a[href|="/rwhomeverthisis"],a[href|="/unamusedsunset"],a[href|="/unamusedss"],a[href|="/sunsetseriously"],a[href|="/ssseriously"],.side .md table tr:nth-of-type(13) td:nth-of-type(1):after,.flair-screwball {
   background-position:0 -600%;
 }
 
